--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/react": "~18.2.45",
+    "axios": "^1.7.6",
     "expo": "~51.0.6",
     "expo-av": "~14.0.4",
     "expo-constants": "~16.0.1",
