--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-av": "~14.0.4",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
+    "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-modules-core": "^1.12.20",
