--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-modules-core": "^1.12.20",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
+    "install": "^0.13.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
